ci: Remove amd64 for now

--- a/.github/workflows/wave.yml
+++ b/.github/workflows/wave.yml
@@ -61,7 +61,7 @@ jobs:
       matrix:
         files: "${{ fromJson(needs.generate-matrix.outputs.conda-matrix) }}"
         profile: [docker, singularity]
-        platform: ["linux/amd64", "linux/arm64"]
+        platform: ["linux/arm64"]
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
