style: Sort dependencies, and add renovate comments to all rnaseq
Also adds schemas to all the files

--- a/modules/nf-core/dupradar/environment.yml
+++ b/modules/nf-core/dupradar/environment.yml
@@ -4,7 +4,5 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - "bioconda::bioconductor-dupradar=1.32.0"
-
-# pipelines:
-#  - rnaseq
+  # renovate: datasource=conda depName=bioconda/bioconductor-dupradar
+  - bioconda::bioconductor-dupradar=1.32.0
