--- a/modules/nf-core/bracken/bracken/environment.yml
+++ b/modules/nf-core/bracken/bracken/environment.yml
@@ -1,8 +1,8 @@
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
 dependencies:
-  - "bioconda::bracken=2.9"
-
-# pipelines:
-#  - rnaseq
+  # renovate: datasource=conda depName=bioconda/bracken
+  - bioconda::bracken=2.9
