--- a/modules/nf-core/custom/catadditionalfasta/environment.yml
+++ b/modules/nf-core/custom/catadditionalfasta/environment.yml
@@ -4,7 +4,5 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  # renovate: datasource=conda depName=conda-forge/python
   - conda-forge::python=3.12.2
-
-# pipelines:
-#  - rnaseq
