--- a/modules/nf-core/hisat2/align/environment.yml
+++ b/modules/nf-core/hisat2/align/environment.yml
@@ -1,9 +1,10 @@
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
 dependencies:
+  # renovate: datasource=conda depName=bioconda/hisat2
   - bioconda::hisat2=2.2.1
+  # renovate: datasource=conda depName=bioconda/samtools
   - bioconda::samtools=1.16.1
-
-# pipelines:
-#  - rnaseq
