--- a/modules/nf-core/kraken2/kraken2/environment.yml
+++ b/modules/nf-core/kraken2/kraken2/environment.yml
@@ -1,10 +1,10 @@
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
 dependencies:
-  - "bioconda::kraken2=2.1.3"
-  - "coreutils=9.4"
-  - "pigz=2.8"
-
-# pipelines:
-#  - rnaseq
+  # renovate: datasource=conda depName=bioconda/kraken2
+  - bioconda::kraken2=2.1.3
+  - coreutils=9.4
+  - pigz=2.8
