--- a/modules/nf-core/rsem/preparereference/environment.yml
+++ b/modules/nf-core/rsem/preparereference/environment.yml
@@ -1,9 +1,10 @@
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
 dependencies:
+  # renovate: datasource=conda depName=bioconda/rsem
   - bioconda::rsem=1.3.3
+  # renovate: datasource=conda depName=bioconda/star
   - bioconda::star=2.7.10a
-
-# pipelines:
-#  - rnaseq
