--- a/modules/nf-core/rseqc/readduplication/environment.yml
+++ b/modules/nf-core/rseqc/readduplication/environment.yml
@@ -1,9 +1,10 @@
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
 dependencies:
+  # renovate: datasource=conda depName=bioconda/rseqc
   - bioconda::rseqc=5.0.3
+  # renovate: datasource=conda depName=conda-forge/r-base
   - conda-forge::r-base>=3.5
-
-# pipelines:
-#  - rnaseq
