--- a/modules/nf-core/star/genomegenerate/environment.yml
+++ b/modules/nf-core/star/genomegenerate/environment.yml
@@ -1,12 +1,15 @@
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
 
 dependencies:
+  # renovate: datasource=conda depName=bioconda/htslib
   - bioconda::htslib=1.20
+  # renovate: datasource=conda depName=bioconda/samtools
   - bioconda::samtools=1.20
+  # renovate: datasource=conda depName=bioconda/star
   - bioconda::star=2.7.11b
+  # renovate: datasource=conda depName=conda-forge/gawk
   - conda-forge::gawk=5.1.0
-
-# pipelines:
-#  - rnaseq
