--- a/modules/nf-core/stringtie/stringtie/environment.yml
+++ b/modules/nf-core/stringtie/stringtie/environment.yml
@@ -1,8 +1,8 @@
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
 dependencies:
+  # renovate: datasource=conda depName=bioconda/stringtie
   - bioconda::stringtie=2.2.3
-
-# pipelines:
-#  - rnaseq
