--- a/modules/nf-core/summarizedexperiment/summarizedexperiment/environment.yml
+++ b/modules/nf-core/summarizedexperiment/summarizedexperiment/environment.yml
@@ -4,7 +4,5 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - "bioconda::bioconductor-summarizedexperiment=1.32.0"
-
-# pipelines:
-#  - rnaseq
+  # renovate: datasource=conda depName=bioconda/bioconductor-summarizedexperiment
+  - bioconda::bioconductor-summarizedexperiment=1.32.0
