--- a/modules/nf-core/trimgalore/environment.yml
+++ b/modules/nf-core/trimgalore/environment.yml
@@ -1,10 +1,11 @@
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
 
 dependencies:
+  # renovate: datasource=conda depName=bioconda/cutadapt
   - bioconda::cutadapt=4.9
+  # renovate: datasource=conda depName=bioconda/trim-galore
   - bioconda::trim-galore=0.6.10
-
-# pipelines:
-#  - rnaseq
