--- a/modules/nf-core/tximeta/tximport/environment.yml
+++ b/modules/nf-core/tximeta/tximport/environment.yml
@@ -4,7 +4,5 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - "bioconda::bioconductor-tximeta=1.20.1"
-
-# pipelines:
-#  - rnaseq
+  # renovate: datasource=conda depName=bioconda/bioconductor-tximeta
+  - bioconda::bioconductor-tximeta=1.20.1
