--- a/modules/nf-core/ucsc/bedgraphtobigwig/environment.yml
+++ b/modules/nf-core/ucsc/bedgraphtobigwig/environment.yml
@@ -1,8 +1,8 @@
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
 dependencies:
+  # renovate: datasource=conda depName=bioconda/ucsc-bedgraphtobigwig
   - bioconda::ucsc-bedgraphtobigwig=469
-
-# pipelines:
-#  - rnaseq
