--- a/.github/workflows/wave.yml
+++ b/.github/workflows/wave.yml
@@ -52,7 +52,7 @@ jobs:
     # if: github.repository == 'nf-core/modules'
     if: ${{ needs.generate-matrix.outputs.conda-matrix != '[]' }}
     needs: generate-matrix
-    name: Build ${{ matrix.profile }} ${{ matrix.platform }} Container
+    name: 🌊 ${{ matrix.profile }} ${{ matrix.platform }}
     runs-on: ubuntu-latest
     timeout-minutes: 60
     strategy:
@@ -89,7 +89,7 @@ jobs:
     # if: github.repository == 'nf-core/modules'
     if: ${{ needs.generate-matrix.outputs.dockerfile-matrix != '[]' }}
     needs: generate-matrix
-    name: Build Dockerfile-based ${{ matrix.platform }} Container
+    name: 🌊 Dockerfile ${{ matrix.platform }} Container
     runs-on: ubuntu-latest
     timeout-minutes: 60
     strategy:
