--- a/.github/workflows/wave.yml
+++ b/.github/workflows/wave.yml
@@ -52,7 +52,7 @@ jobs:
     # if: github.repository == 'nf-core/modules'
     if: ${{ needs.generate-matrix.outputs.conda-matrix != '[]' }}
     needs: generate-matrix
-    name: 🌊 ${{ matrix.profile }} ${{ matrix.platform }}
+    name: 🌊 ${{ matrix.files }} ${{ matrix.profile }} ${{ matrix.platform }}
     runs-on: ubuntu-latest
     timeout-minutes: 60
     strategy:
