update other mafft tests

--- a/subworkflows/nf-core/fasta_newick_epang_gappa/meta.yml
+++ b/subworkflows/nf-core/fasta_newick_epang_gappa/meta.yml
@@ -12,7 +12,7 @@ components:
   - hmmer/hmmalign
   - hmmer/eslalimask
   - hmmer/eslreformat
-  - mafft
+  - mafft/align
   - epang/place
   - epang/split
   - gappa/examinegraft
