--- a/modules/nf-core/mafft/guidetree/meta.yml
+++ b/modules/nf-core/mafft/guidetree/meta.yml
@@ -25,7 +25,7 @@ input:
         description: FASTA file containing the sequences to be used to render the guidetree.
         pattern: "*.{fa,fasta}"
 output:
-  - fas:
+  - tree:
       - meta:
           type: map
           description: |
