--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -64,15 +64,12 @@ jobs:
         id: filter
         with:
           filters: |
-            allChanges:
-              - added
-              - modified
             modules:
-              - 'modules/nf-core/**'
-              - 'tests/modules/nf-core/**'
+              - added|modified: 'modules/nf-core/**'
+              - added|modified: 'tests/modules/nf-core/**'
             subworkflows:
-              - 'subworkflows/nf-core/**'
-              - 'tests/subworkflows/nf-core/**'
+              - added|modified: 'subworkflows/nf-core/**'
+              - added|modified: 'tests/subworkflows/nf-core/**'
           token: ""
           list-files: "json"
 
