--- a/modules/nf-core/malt/run/tests/nextflow.config
+++ b/modules/nf-core/malt/run/tests/nextflow.config
@@ -1,12 +1,16 @@
 process {
+    resourceLimits = [
+        memory: '6.GB'
+    ]
+}
+
+process {
 
     withName: MALT_BUILD {
         ext.args = "-J-Xmx6G --sequenceType DNA"
-        memory   = 6.GB
     }
 
     withName: MALT_RUN {
         ext.args = "-m BlastN -J-Xmx6G -a . -f SAM"
-        memory   = 6.GB
     }
 }
