--- a/modules/nf-core/sylph/sketch/meta.yml
+++ b/modules/nf-core/sylph/sketch/meta.yml
@@ -28,23 +28,25 @@ input:
         type: file
         description: Reference genome file in FASTA format
 output:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test', single_end:false ]
-  - sylsp:
-      type: file
-      description: Sylph sketch file
-      pattern: "my_sketches/*.sylsp"
-  - syldb:
-      type: file
-      description: Sylph database file
-      pattern: "database.syldb"
+  - sketch_fastq_genome:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test', single_end:false ]
+      - sylsp:
+          type: file
+          description: Sylph sketch file
+          pattern: "my_sketches/*.sylsp"
+      - syldb:
+          type: file
+          description: Sylph database file
+          pattern: "database.syldb"
   - versions:
-      type: file
-      description: File containing software versions
-      pattern: "versions.yml"
+      - versions.yml:
+          type: file
+          description: File containing software versions
+          pattern: "versions.yml"
 authors:
   - "@jiahang1234"
   - "@sofstam"
