--- a/modules/nf-core/malt/run/tests/nextflow.config
+++ b/modules/nf-core/malt/run/tests/nextflow.config
@@ -7,7 +7,7 @@ process {
 process {
 
     withName: MALT_BUILD {
-        ext.args = "-J-Xmx6G --sequenceType DNA"
+        ext.args = { "-J-Xmx${task.memory.toGiga()}G --sequenceType DNA" }
     }
 
     withName: MALT_RUN {
