--- a/modules/nf-core/malt/run/tests/nextflow.config
+++ b/modules/nf-core/malt/run/tests/nextflow.config
@@ -8,6 +8,6 @@ process {
     }
 
     withName: MALT_RUN {
-        ext.args = "-m BlastN -J-Xmx6G -a . -f SAM"
+        ext.args = { "-m BlastN -J-Xmx${task.memory.toGiga()}G -a . -f SAM" }
     }
 }
