Add mafft guidetree (#7097)
* move mafft to mafft_align

* add mafft guidetree

* update mafft align

* add mafft guidetree tests

* fixes

* up

* update other mafft tests

* update mafft

* fix

* don't lint deleted files

* filter out main.nf.test and main.nf.snapshot

* try different strategy

* fix other

* fix other

* add tests

* remove pytest

* up

* update nftest

* fix

---------

Co-authored-by: mashehu <mashehu3@gmail.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -65,11 +65,11 @@ jobs:
         with:
           filters: |
             modules:
-              - 'modules/nf-core/**'
-              - 'tests/modules/nf-core/**'
+              - added|modified: 'modules/nf-core/**'
+              - added|modified: 'tests/modules/nf-core/**'
             subworkflows:
-              - 'subworkflows/nf-core/**'
-              - 'tests/subworkflows/nf-core/**'
+              - added|modified: 'subworkflows/nf-core/**'
+              - added|modified: 'tests/subworkflows/nf-core/**'
           token: ""
           list-files: "json"
 
@@ -84,7 +84,7 @@ jobs:
                 .replace('modules/nf-core/', '')
                 .split('/')
                 .slice(0, 2)
-                .filter(x => x !== 'main.nf' && x !== 'tests' && x !== 'meta.yml' && x !== 'environment.yml')
+                .filter(x => !x.startsWith('main.nf') && x !== 'tests' && x !== 'meta.yml' && x !== 'environment.yml')
                 .join('/'))
               )
             ];
