--- a/modules/nf-core/create_gene_heatmap/tests/nextflow.config
+++ b/modules/nf-core/create_gene_heatmap/tests/nextflow.config
@@ -1,5 +1,5 @@
 nextflow.enable.moduleBinaries = true
 
 process {
-    ext.args = { "SAMPLE_ID" } //column will be used for the rows in the generated heatmap
+    ext.args = { "SAMPLE_ID" } // column to be used from annotated_endo_data for the rows in the generated heatmap
 }
