--- a/subworkflows/nf-core/compute_gene_scores_heatmap/tests/nextflow.config
+++ b/subworkflows/nf-core/compute_gene_scores_heatmap/tests/nextflow.config
@@ -1,1 +1,11 @@
 nextflow.enable.moduleBinaries = true
+
+process {
+    withName: CREATE_GENE_HEATMAP {
+        ext.args = { "SAMPLE_ID" } // column to be used from annotated_endo_data for the rows in the generated heatmap
+    }
+
+    withName: COMPUTE_GENE_SCORES {
+        ext.args = { "plage.dir" } // options are plage, plage.dir (directed PLAGE), GSVA, singscore, ssgsea, median, mean, sams
+    }
+}
