--- a/modules/nf-core/create_gene_heatmap/meta.yml
+++ b/modules/nf-core/create_gene_heatmap/meta.yml
@@ -9,6 +9,10 @@ tools:
       description: |
         The create_gene_heatmap module generates a heatmap of gene counts using ComplexHeatmap R package.
         It supports gene selection via additional files and provides a log-transformed visualization of the data.
+      homepage: "https://github.com/nf-core/nanostring"
+      documentation: "https://raw.githubusercontent.com/nf-core/nanostring/refs/heads/master/docs/usage.md"
+      licence: [""]
+      identifier: ""
 input:
   - - meta:
         type: map
