--- a/modules/nf-core/shigapass/meta.yml
+++ b/modules/nf-core/shigapass/meta.yml
@@ -17,24 +17,36 @@ input:
       description: |
         Groovy Map containing sample information
         e.g. [ id:'test', single_end:false ]
-  - assembly:
-      type: file
-      description: FASTA, GenBank or EMBL formatted file. Note that the standard input for ShigaPass is a file of file paths - here for paralellisation a fasta file is required.
-      pattern: "*.{fa,fasta,fna,fa.gz,fasta.gz,fna.gz}"
+    - assembly:
+        type: file
+        description: FASTA, GenBank or EMBL formatted file. Note that the standard input for ShigaPass is a file of file paths - here for paralellisation a fasta file is required.
+        pattern: "*.{fa,fasta,fna,fa.gz,fasta.gz,fna.gz}"
 output:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test', single_end:false ]
+  - - report:
+    - meta:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. [ id:'test', single_end:false ]
+    - report:
+        type: file
+        description: Tab-delimited report of results
+        pattern: "*.{tsv}"
+  - - flex_tsv:
+    - meta:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. [ id:'test', single_end:false ]
+    - report:
+        type: file
+        description: Tab-delimited report of results
+        pattern: "*.{tsv}"
   - versions:
       type: file
       description: File containing software versions
       pattern: "versions.yml"
-  - report:
-      type: file
-      description: Comma-delimited report of results
-      pattern: "*.{csv}"
+
 authors:
   - "@maxlcummins"
 maintainers:
