--- a/modules/nf-core/shigapass/meta.yml
+++ b/modules/nf-core/shigapass/meta.yml
@@ -1,5 +1,5 @@
 name: shigapass
-description: ShigaPass is a new in silico tool used to predict Shigella serotypes and to differentiate between Shigella, EIEC (Enteroinvasive E. coli), and non Shigella/EIEC using assembled whole genomes.
+description: ShigaPass is an in silico tool used to predict Shigella serotypes and to differentiate between Shigella, EIEC (Enteroinvasive E. coli), and non Shigella/EIEC using assembled whole genomes.
 keywords:
   - bacteria
   - shigella
