--- a/modules/nf-core/sylph/profile/meta.yml
+++ b/modules/nf-core/sylph/profile/meta.yml
@@ -23,7 +23,7 @@ input:
           e.g. `[ id:'test', single_end:false ]`
     - reads:
         type: file
-        description:description: |
+        description: |
           List of input FastQ/FASTA files of size 1 and 2 for single-end and paired-end data,
           respectively. They are automatically sketched to .sylsp/.syldb
   - - pre_sketched_files:
