change normalise by normalize

--- a/modules/nf-core/nacho/normalize/meta.yml
+++ b/modules/nf-core/nacho/normalize/meta.yml
@@ -1,5 +1,5 @@
 ---
-name: nacho_normalise
+name: nacho_normalize
 description: |
   NACHO (NAnostring quality Control dasHbOard) is developed for NanoString nCounter data.
   NanoString nCounter data is a messenger-RNA/micro-RNA (mRNA/miRNA) expression assay and works with fluorescent barcodes.
