--- a/modules/nf-core/creategeneheatmap/meta.yml
+++ b/modules/nf-core/creategeneheatmap/meta.yml
@@ -1,13 +1,13 @@
-name: create_gene_heatmap
+name: creategeneheatmap
 description: Generate a gene count heatmap based on annotated and filtered gene counts data.
 keywords:
   - bioinformatics tools
   - data visualization
   - gene heatmap
 tools:
-  - create_gene_heatmap:
+  - creategeneheatmap:
       description: |
-        The create_gene_heatmap module generates a heatmap of gene counts using ComplexHeatmap R package.
+        The creategeneheatmap module generates a heatmap of gene counts using ComplexHeatmap R package.
         It supports gene selection via additional files and provides a log-transformed visualization of the data.
       homepage: "https://github.com/nf-core/nanostring"
       documentation: "https://raw.githubusercontent.com/nf-core/nanostring/refs/heads/master/docs/usage.md"
