--- a/modules/nf-core/computegenescores/meta.yml
+++ b/modules/nf-core/computegenescores/meta.yml
@@ -1,4 +1,4 @@
-name: compute_gene_scores
+name: computegenescores
 description: calculate gene set enrichment scores using multiple methods.
 keywords:
   - bioinformatics tools
@@ -9,7 +9,7 @@ keywords:
   - PLAGE
   - Samsscore
 tools:
-  - compute_gene_scores:
+  - computegenescores:
       description: |
         Computes gene scores using various methods such as Singscore, GSVA, SSGSEA, PLAGE, and Samsscore.
         It includes multiple gene set transformations and scoring techniques.
