--- a/modules/nf-core/deseq2/differential/meta.yml
+++ b/modules/nf-core/deseq2/differential/meta.yml
@@ -53,7 +53,7 @@ input:
           Raw TSV or CSV format expression matrix as output from the nf-core
           RNA-seq workflow
   - - meta3:
-        type: file
+        type: map
         description: |
           Meta map describing control genes, e.g. [ id: 'ERCC' ]
     - control_genes_file:
@@ -73,101 +73,86 @@ input:
           differences in average transcript lengths across samples.
 output:
   - results:
-      - meta:
-          type: file
-          description: TSV-format table of differential expression information as output
-            by DESeq2
-          pattern: "deseq2.results.tsv"
+      - out_meta:
+          type: map
+          description: |
+            Groovy Map containing merged metadata from meta and meta2
       - "*.deseq2.results.tsv":
           type: file
           description: TSV-format table of differential expression information as output
             by DESeq2
-          pattern: "deseq2.results.tsv"
   - dispersion_plot:
-      - meta:
-          type: file
-          description: DESeq2 dispersion plot
-          pattern: "deseq2.dispersion.png"
+      - out_meta:
+          type: map
+          description: |
+            Groovy Map containing merged metadata from meta and meta2
       - "*.deseq2.dispersion.png":
           type: file
           description: DESeq2 dispersion plot
-          pattern: "deseq2.dispersion.png"
   - rdata:
-      - meta:
-          type: file
-          description: Serialised DESeq2 object
-          pattern: "dds.rld.rds"
+      - out_meta:
+          type: map
+          description: |
+            Groovy Map containing merged metadata from meta and meta2
       - "*.dds.rld.rds":
           type: file
           description: Serialised DESeq2 object
-          pattern: "dds.rld.rds"
   - size_factors:
-      - meta:
-          type: file
-          description: Size factors
-          pattern: "deseq2.sizefactors.tsv"
+      - out_meta:
+          type: map
+          description: |
+            Groovy Map containing merged metadata from meta and meta2
       - "*.deseq2.sizefactors.tsv":
           type: file
           description: Size factors
-          pattern: "deseq2.sizefactors.tsv"
   - normalised_counts:
-      - meta:
-          type: file
-          description: TSV-format counts matrix, normalised to size factors
-          pattern: "normalised_counts.tsv"
+      - out_meta:
+          type: map
+          description: |
+            Groovy Map containing merged metadata from meta and meta2
       - "*.normalised_counts.tsv":
           type: file
           description: TSV-format counts matrix, normalised to size factors
-          pattern: "normalised_counts.tsv"
   - rlog_counts:
-      - meta:
-          type: file
+      - out_meta:
+          type: map
           description: |
-            Optional, TSV-format counts matrix, normalised to size factors, with
-            variance stabilisation applied via `rlog()`.
-          pattern: "rlog.tsv"
+            Groovy Map containing merged metadata from meta and meta2
       - "*.rlog.tsv":
           type: file
           description: |
             Optional, TSV-format counts matrix, normalised to size factors, with
             variance stabilisation applied via `rlog()`.
-          pattern: "rlog.tsv"
   - vst_counts:
-      - meta:
-          type: file
+      - out_meta:
+          type: map
           description: |
-            Optional, TSV-format counts matrix, normalised to size factors, with
-            variance stabilisation applied via `vst()`.
-          pattern: "vst_counts.tsv"
+            Groovy Map containing merged metadata from meta and meta2
       - "*.vst.tsv":
           type: file
           description: |
             Optional, TSV-format counts matrix, normalised to size factors, with
             variance stabilisation applied via `vst()`.
-          pattern: "vst_counts.tsv"
   - model:
-      - meta:
-          type: file
-          description: TXT-format DESeq2 model
-          pattern: "deseq2.model.tsv"
+      - out_meta:
+          type: map
+          description: |
+            Groovy Map containing merged metadata from meta and meta2
       - "*.deseq2.model.txt":
           type: file
           description: TXT-format DESeq2 model
-          pattern: "deseq2.model.tsv"
   - session_info:
-      - meta:
-          type: file
-          description: dump of R SessionInfo
-          pattern: "*.log"
+      - out_meta:
+          type: map
+          description: |
+            Groovy Map containing merged metadata from meta and meta2
       - "*.R_sessionInfo.log":
           type: file
           description: dump of R SessionInfo
-          pattern: "*.log"
   - versions:
-      - versions.yml:
+      - "versions.yml":
           type: file
           description: File containing software versions
-          pattern: "versions.yml"
 authors:
   - "@pinin4fjords"
 maintainers:
