update snapshot after renaming

--- a/modules/nf-core/nacho/normalize/tests/nextflow.config
+++ b/modules/nf-core/nacho/normalize/tests/nextflow.config
@@ -1,7 +1,7 @@
 nextflow.enable.moduleBinaries = true
 
 process {
-    withName: 'NACHO_NORMALISE' {
+    withName: 'NACHO_NORMALIZE' {
         ext.args = params.module_args
     }
 }
