--- a/.github/actions/nf-test-action/action.yml
+++ b/.github/actions/nf-test-action/action.yml
@@ -80,7 +80,7 @@ runs:
           --tap=test.tap \
           --verbose \
           --ci \
-          --changed-since HEAD^ \
+          ${{ inputs.tags && '' || '--changed-since HEAD^' }} \
           --shard ${{ inputs.shard }}/${{ inputs.total_shards }} \
           --filter process,workflow \
           --follow-dependencies \
