--- a/.github/workflows/gpu-tests.yml
+++ b/.github/workflows/gpu-tests.yml
@@ -66,6 +66,7 @@ jobs:
           base: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}
           n_parents: 2
           tags: "gpu"
+          log_level: DEBUG
 
       - name: Separate modules and subworkflows
         id: outputs
