--- a/.github/workflows/nf-test.yml
+++ b/.github/workflows/nf-test.yml
@@ -105,4 +105,4 @@ jobs:
           profile: ${{ matrix.profile }}
           shard: ${{ matrix.shard }}
           total_shards: ${{ env.TOTAL_SHARDS }}
-          tags: ${{matrix.paths }}
+          paths: ${{matrix.paths }}
