stub, stub test and formatting fixes

--- a/modules/nf-core/plink/genome/meta.yml
+++ b/modules/nf-core/plink/genome/meta.yml
@@ -1,9 +1,10 @@
 name: "plink_genome"
-description: Calculates identity-by-descent
+description: Calculates identity-by-descent over autosomal SNPs
 keywords:
   - plink
   - identity-by-descent
   - genetics
+  - genome
 tools:
   - "plink":
       description: "Whole genome association analysis toolset, designed to perform a
