See if different output prefix for limma_norm helps

--- a/subworkflows/nf-core/abundance_differential_filter/tests/deseq2_limmavoom_basic.config
+++ b/subworkflows/nf-core/abundance_differential_filter/tests/deseq2_limmavoom_basic.config
@@ -12,4 +12,13 @@ process {
         ].join(' ').trim() }
         ext.prefix = { "${meta.id}_${meta2.method}" }
     }
+
+    withName: 'LIMMA_NORM' {
+        ext.args = { [
+            "--sample_id_col sample",
+            "--probe_id_col gene_id",
+            "--use_voom TRUE"
+        ].join(' ').trim() }
+        ext.prefix = { "${meta.id}_${meta2.method}_norm" }
+    }
 }
