--- a/subworkflows/nf-core/abundance_differential_filter/tests/limma_voom.config
+++ b/subworkflows/nf-core/abundance_differential_filter/tests/limma_voom.config
@@ -10,4 +10,12 @@ process {
         ].join(' ').trim() }
     }
 
+    withName: 'LIMMA_NORM' {
+        ext.args = { [
+            "--sample_id_col sample",
+            "--probe_id_col gene_id",
+            "--use_voom TRUE"
+        ].join(' ').trim() }
+        ext.prefix = { "${meta.id}_${meta2.method}_norm" }
+    }
 }
